# jlhd

./: .gitignore  check-package-versions.py  feeds.toml  generate-docset.py  packages.toml  pyproject.toml  requirements.txt  update-package-version.py
.github/workflows/: update-docset.yml
jlhd/: __main__.py  docset.py  scrapper.py
lib/: __main__.py  docset.py  spider.py
scripts/: check-package-versions.py
