[project]
name = "jlhd"
version = "0.1.0"
description = "Generate DocSet for Julia packages from JuliaHub documentation"
authors = [
    {name = "Sergio Sánchez Ramírez", email = "sergio.sanchez.ramirez+github@bsc.es"},
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "scrapy>=2.0",
]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
